# forecast_peak

./: .gitignore  README.md  assignement.ipynb  coin_toss.ipynb  estimate_probability.py  pyproject.toml
