[tool.poetry]
name = "amperon-take-home"
version = "0.0.1"
description = "Take Home Assignement for Amperon Interview."
authors = ["Andrea Turcati <aturcati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
statsforecast = "^1.7.8"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
ipywidgets = "^8.1.5"
holidays = "^0.58"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
ipykernel = "^6.29.5"

[build-system]
package-mode = false
