[tool.poetry]
name = "amperon-take-home"
version = "0.0.1"
description = "Take Home Assignement for Amperon Interview."
authors = ["Andrea Turcati <aturcati@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
ipywidgets = "^8.1.5"
holidays = "^0.58"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"
catboost = "^1.2.7"
statsmodels = "^0.14.4"
scipy = "^1.14.1"
ppscore = {git = "https://github.com/aturcati/ppscore.git"}
setuptools = "^75.2.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
ipykernel = "^6.29.5"

[build-system]
package-mode = false
